--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CleanArchitectureTest</string>
+    <string name="home">홈</string>
+    <string name="shop">상점</string>
+    <string name="setting">설정</string>
 </resources>
