--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">홈</string>
     <string name="shop">상점</string>
     <string name="setting">설정</string>
+    <string name="main_next_data">다음 데이터 로드</string>
 </resources>
